--- a/config.json
+++ b/config.json
@@ -5,5 +5,7 @@
   "CONSUMER_API_SECRET":"FILL THIS OUT",
   "BEARER":"FILL THIS OUT",
   "ACCESS_TOKEN":"FILL THIS OUT",
-  "ACCESS_SECRET":"FILL THIS OUT"
+  "ACCESS_SECRET":"FILL THIS OUT",
+  "DELAY_IN_MINUTES":30,
+  "IMAGES_PATH":"panels"
 }
