--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "BOTNAME":"AlphaCafe",
+  "TWITTER_HANDLE":"@AlphaCafe",
   "CLIENT_ID":"FILL THIS OUT",
   "CLIENT_SECRET":"FILL THIS OUT",
   "CONSUMER_API_KEY":"FILL THIS OUT",
