--- a/config.json
+++ b/config.json
@@ -8,8 +8,10 @@
   "ACCESS_TOKEN":"FILL THIS OUT",
   "ACCESS_SECRET":"FILL THIS OUT",
   "DELAY_IN_MINUTES":30,
-  "IMAGES_PATH":"panels"
+  "IMAGES_PATH":"media"
   "INIT_WITH_POST": true,
   "TWEET_WITH_TEXT": false,
-  "TEXT_FILE": "text.txt"
+  "TEXT_FILE": "text.txt",
+  "RETRY_ON_ERROR": true,
+  "MAX_RETRIES": 5
 }
