--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
   "ACCESS_TOKEN":"FILL THIS OUT",
   "ACCESS_SECRET":"FILL THIS OUT",
   "DELAY_IN_MINUTES":30,
-  "IMAGES_PATH":"media"
+  "IMAGES_PATH":"media",
   "INIT_WITH_POST": true,
   "TWEET_WITH_TEXT": false,
   "TEXT_FILE": "text.txt",
